# localstack-azure-samples

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cleanup.sh  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  run-samples.sh
.claude/: settings.json
.github/: CODEOWNERS
.github/scripts/: build-matrix.sh
.github/workflows/: dispatch-ci.yml  lint_workflows.yml  pre-commit.yml  run-samples.yml
docs/: LOCALSTACK.md
samples/aci-blob-storage/python/: README.md
samples/aci-blob-storage/python/bicep/: README.md  deploy.sh  main.bicep  main.bicepparam
samples/aci-vacation-planner/python/: README.md
samples/function-app-and-storage/: README.md
samples/function-app-and-storage/visio/: architecture.vsdx
samples/function-app-front-door/: README.md
samples/function-app-front-door/python/: README.md
samples/function-app-managed-identity/python/: README.md
samples/function-app-service-bus/dotnet/: README.md
samples/function-app-storage-http/dotnet/: METHODS.md  README.md
samples/servicebus/: README.md
samples/servicebus/java/: README.md
samples/web-app-cosmosdb-mongodb-api/python/: README.md
samples/web-app-cosmosdb-nosql-api/python/: README.md
samples/web-app-custom-image/python/: README.md
samples/web-app-managed-identity/python/: README.md
samples/web-app-mysql-flexible-server/python/: README.md
samples/web-app-postgresql-database/python/: README.md  docker-compose.yml
samples/web-app-postgresql-flexible-server/python/: README.md
samples/web-app-sql-database/python/: README.md
(+375 files in other folders)
